--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^14.2.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "socket.io-client": "^4.8.1",
     "three": "^0.178.0"
   },
   "devDependencies": {
