--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "^14.2.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.178.0"
+    "socket.io-client": "^4.8.1",
+    "three": "^0.178.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
