--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "cannon-es": "^0.20.0",
     "next": "^14.2.30",
     "react": "^18.2.0",
+    "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.2.0",
-    "three": "^0.178.0"
+    "three": "^0.178.0",
+    "three-stdlib": "^2.36.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
