--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.3",
     "socket.io-client": "^4.8.1",
     "three": "^0.178.0",
     "three-stdlib": "^2.36.0",
